--- a/public/home/index.html
+++ b/public/home/index.html
@@ -21,13 +21,12 @@
     * { box-sizing: border-box; }
 
     body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-      background: #d2cab6;
-      color: var(--text-main);
-      min-height: 100vh;
-    }
+  background: #d2cab6;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
 
     header {
       background: linear-gradient(120deg, #b22222, #ffffff, #1f4e79);
