--- a/public/mail/index.html
+++ b/public/mail/index.html
@@ -22,13 +22,12 @@
     * { box-sizing: border-box; }
 
     body {
-  background: #d2cab6;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #d2cab6;
+      color: var(--text-main);
+      min-height: 100vh;
+    }
 
     header {
       background: linear-gradient(120deg, #b22222, #ffffff, #1f4e79);
@@ -821,6 +820,5 @@
       }
     });
   </script>
-  <script src="/assets/js/background.js"></script>
 </body>
 </html>
