--- a/public/home/index.html
+++ b/public/home/index.html
@@ -253,14 +253,17 @@
     }
 
     .roster-search input[type="search"]{
-      width: min(520px, 100%);
-      padding: 12px 14px;
-      border-radius: 12px;
-      border: 1px solid rgba(0,0,0,.12);
-      outline: none;
-      background: rgba(255,255,255,.85);
-      font-size: 14px;
-    }
+  width: min(520px, 100%);
+  padding: 12px 14px;
+  border-radius: 12px;
+
+  /* Strong visible outline */
+  border: 2px solid black;
+
+  outline: none;
+  background: rgba(255,255,255,.95);
+  font-size: 14px;
+}
 
     .roster-results {
       margin-top: 10px;
