--- a/public/home/index.html
+++ b/public/home/index.html
@@ -258,11 +258,12 @@
   border-radius: 12px;
 
   /* Strong visible outline */
-  border: 2px solid black;
+  border: 2px solid #111;
 
   outline: none;
   background: rgba(255,255,255,.95);
   font-size: 14px;
+box-shadow: 0 2px 6px rgba(0,0,0,.15);
 }
 
     .roster-results {
