--- a/public/events/index.html
+++ b/public/events/index.html
@@ -281,15 +281,6 @@
       margin-top: 6px;
     }
 
-    .event-map-container {
-      margin-top: 12px;
-      overflow: hidden;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-    }
-
-    /* Events list */
-
     .events-list {
       display: flex;
       flex-direction: column;
@@ -442,7 +433,6 @@
       </div>
     </div>
 
-    <!-- Admin: Create Event -->
     <section>
       <h2>Create Event</h2>
       <form id="event-form" class="admin-only">
@@ -493,8 +483,9 @@
         <button type="submit">Create Event</button>
         <div id="event-error" class="small-help" style="color:#b91c1c;"></div>
         <div id="event-success" class="small-help" style="color:#166534;"></div>
+
         <div class="small-help">
-          Each event gets its own unique link, like <code>/events/fall-camporee-2026</code>, with RSVP, maps, and event-specific info.
+          Each event gets its own unique link, like <code>/events/event?id=YOUR_EVENT_ID</code>.
         </div>
       </form>
 
@@ -503,30 +494,23 @@
       </div>
     </section>
 
-    <!-- Events grouped by time -->
     <section>
       <h2>Events</h2>
 
       <div class="events-group">
-        <h3 class="events-group-title">
-          Happening Now
-        </h3>
+        <h3 class="events-group-title">Happening Now</h3>
         <div id="events-current" class="events-list"></div>
         <div id="events-current-empty" class="empty-text">No events are currently happening.</div>
       </div>
 
       <div class="events-group">
-        <h3 class="events-group-title">
-          Upcoming Events
-        </h3>
+        <h3 class="events-group-title">Upcoming Events</h3>
         <div id="events-upcoming" class="events-list"></div>
         <div id="events-upcoming-empty" class="empty-text">No upcoming events.</div>
       </div>
 
       <div class="events-group">
-        <h3 class="events-group-title">
-          Past Events
-        </h3>
+        <h3 class="events-group-title">Past Events</h3>
         <div id="events-past" class="events-list"></div>
         <div id="events-past-empty" class="empty-text">No past events yet.</div>
       </div>
@@ -535,11 +519,7 @@
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import {
-      getAuth,
-      onAuthStateChanged,
-      signOut
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
     import {
       getFirestore,
       doc,
@@ -547,8 +527,6 @@
       collection,
       setDoc,
       onSnapshot,
-      query,
-      orderBy,
       serverTimestamp
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
@@ -652,8 +630,6 @@
 
     // --- Date helpers ---
     function parseEventDateTime(ev, which) {
-      // which: "start" | "end"
-      // Prefer Firestore-style: startDate (YYYY-MM-DD) + startTime (HH:MM)
       const dateKey = which === "start" ? "startDate" : "endDate";
       const timeKey = which === "start" ? "startTime" : "endTime";
 
@@ -661,13 +637,11 @@
       const t = (ev[timeKey] || "").trim();
 
       if (d) {
-        // If time missing, assume 00:00 to keep it parseable
         const iso = `${d}T${t || "00:00"}`;
         const dt = new Date(iso);
         if (!isNaN(dt.getTime())) return dt;
       }
 
-      // Fallback to older fields startDateTime/endDateTime if present
       const dtStr = which === "start" ? ev.startDateTime : ev.endDateTime;
       if (dtStr) {
         const dt = new Date(dtStr);
@@ -680,31 +654,25 @@
     function formatDateDisplay(dateStr, timeStr) {
       if (!dateStr) return "";
       const date = new Date(dateStr + (timeStr ? "T" + timeStr : "T00:00"));
-      const base = date.toLocaleString("en-US", {
-        month: "short",
-        day: "numeric",
-        year: "numeric"
-      });
+      const base = date.toLocaleString("en-US", { month: "short", day: "numeric", year: "numeric" });
       return timeStr ? `${base} • ${timeStr}` : base;
     }
 
     function formatDateRange(ev) {
-      // If stored as separate date/time strings, use those for display
       if (ev.startDate) {
         const start = formatDateDisplay(ev.startDate, ev.startTime);
         const end = ev.endDate ? formatDateDisplay(ev.endDate, ev.endTime) : "";
-
         if (!ev.endDate || ev.startDate === ev.endDate) return start;
         return `${start} → ${end}`;
       }
 
-      // Fallback display from startDateTime/endDateTime
       const startDt = parseEventDateTime(ev, "start");
       const endDt = parseEventDateTime(ev, "end");
-
       if (!startDt && !endDt) return "";
-      const fmt = (d) =>
-        d.toLocaleString("en-US", { month: "short", day: "numeric", year: "numeric", hour: "2-digit", minute: "2-digit" });
+
+      const fmt = (d) => d.toLocaleString("en-US", {
+        month: "short", day: "numeric", year: "numeric", hour: "2-digit", minute: "2-digit"
+      });
 
       if (startDt && !endDt) return fmt(startDt);
       if (!startDt && endDt) return fmt(endDt);
@@ -713,13 +681,12 @@
 
     function createEventCard(docSnap) {
       const data = docSnap.data();
-      const eventId = docSnap.id; // doc id is the eventId
+      const eventId = docSnap.id;
 
       const title = data.title || "Untitled Event";
       const location = data.location || "";
       const summary = (data.description || data.summary || "").trim();
       const signupUrl = (data.signupUrl || "").trim();
-
       const dateText = formatDateRange(data);
 
       const card = document.createElement("div");
@@ -757,7 +724,6 @@
       const linksRow = document.createElement("div");
       linksRow.className = "event-links-row";
 
-      // ✅ FIX: Use the static event detail page with query param (no 404)
       const viewBtn = document.createElement("a");
       viewBtn.href = `/events/event?id=${encodeURIComponent(eventId)}`;
       viewBtn.className = "btn-chip btn-view";
@@ -786,7 +752,6 @@
       }
 
       card.appendChild(linksRow);
-
       return card;
     }
 
@@ -796,7 +761,6 @@
       eventsPast.innerHTML = "";
 
       const now = new Date();
-
       const upcomingDocs = [];
       const currentDocs = [];
       const pastDocs = [];
@@ -822,27 +786,21 @@
         eventsCurrentEmpty.style.display = "block";
       } else {
         eventsCurrentEmpty.style.display = "none";
-        currentDocs.forEach((docSnap) => {
-          eventsCurrent.appendChild(createEventCard(docSnap));
-        });
+        currentDocs.forEach((docSnap) => eventsCurrent.appendChild(createEventCard(docSnap)));
       }
 
       if (upcomingDocs.length === 0) {
         eventsUpcomingEmpty.style.display = "block";
       } else {
         eventsUpcomingEmpty.style.display = "none";
-        upcomingDocs.forEach((docSnap) => {
-          eventsUpcoming.appendChild(createEventCard(docSnap));
-        });
+        upcomingDocs.forEach((docSnap) => eventsUpcoming.appendChild(createEventCard(docSnap)));
       }
 
       if (pastDocs.length === 0) {
         eventsPastEmpty.style.display = "block";
       } else {
         eventsPastEmpty.style.display = "none";
-        pastDocs.forEach((docSnap) => {
-          eventsPast.appendChild(createEventCard(docSnap));
-        });
+        pastDocs.forEach((docSnap) => eventsPast.appendChild(createEventCard(docSnap)));
       }
     }
 
@@ -890,14 +848,12 @@
           endDate,
           endTime,
 
-          // keep legacy fields for sorting/compatibility
           startDateTime: isoStart,
           endDateTime: isoEnd,
 
           location,
           signupUrl: signupUrl || "",
 
-          // Keep both so nothing breaks on either page
           summary,
           description: summary,
 
@@ -905,7 +861,6 @@
           createdBy: currentUser ? currentUser.uid : null
         });
 
-        // ✅ Update message to the correct, working static URL
         eventSuccessEl.textContent = `Event created. Link: /events/event?id=${finalSlug}`;
         eventErrorEl.textContent = "";
 
@@ -929,13 +884,33 @@
         eventForm.addEventListener("submit", createEvent);
       }
 
-      const q = query(
-        collection(db, "events"),
-        orderBy("startDateTime", "asc")
-      );
+      // ✅ FIX: don't orderBy a field that older docs might not have
+      onSnapshot(collection(db, "events"), (snapshot) => {
+        const docs = snapshot.docs.slice();
 
-      onSnapshot(q, (snapshot) => {
-        renderEvents(snapshot.docs);
+        // Client-side sort: start date first; fall back to createdAt; then id
+        docs.sort((a, b) => {
+          const ad = a.data() || {};
+          const bd = b.data() || {};
+
+          const aStart = parseEventDateTime(ad, "start");
+          const bStart = parseEventDateTime(bd, "start");
+
+          if (aStart && bStart) return aStart - bStart;
+          if (aStart && !bStart) return -1;
+          if (!aStart && bStart) return 1;
+
+          const aCreated = ad.createdAt?.toDate ? ad.createdAt.toDate() : null;
+          const bCreated = bd.createdAt?.toDate ? bd.createdAt.toDate() : null;
+
+          if (aCreated && bCreated) return aCreated - bCreated;
+          if (aCreated && !bCreated) return -1;
+          if (!aCreated && bCreated) return 1;
+
+          return a.id.localeCompare(b.id);
+        });
+
+        renderEvents(docs);
       });
     }
   </script>
